...

        Scaffold(
            bottomBar = {
                BottomAppBar(
                    floatingActionButton = {
                        ExtendedFloatingActionButton(
                            modifier = Modifier.testTag("add"),
                            onClick = {
                                show = true
                            },
                        ) {
                            Icon(Icons.Default.Add, "add")
                            Spacer(Modifier.width(8.dp))
...
        ) {
            firstScreen(Modifier.padding(it))
            AnimatedVisibility(show) {
                ModalBottomSheet(
                    onDismissRequest = { show = false },
                    Modifier.fillMaxSize(),
                    dragHandle = { BottomSheetDefaults.DragHandle(Modifier.testTag("handle")) },
                    sheetState = rememberModalBottomSheetState(skipPartiallyExpanded = true),
                ) {
                    secondScreen()
                }
            }
        }
...
