...
    ) {
        LazyColumn(
            state = state,
            // contentPadding = PaddingValues(16.dp),
            verticalArrangement = Arrangement.spacedBy(16.dp),
            modifier = Modifier
                .testTag("main:list"),
        ) {
            item {
                // Spacer(Modifier.windowInsetsTopHeight(WindowInsets.safeDrawing))
            }
            when (mainState) {
                is Result.Loading -> item {
...
